--- a/style.css
+++ b/style.css
@@ -22,12 +22,16 @@ body {
 
 }
 
-.screen {
+#screen {
     display: flex;
     border: 3px solid rgb(0, 0, 0);
+    font-size: 70px;
     height: 150px;
     width: 415px;
     background-color: aliceblue;
+    justify-content: right;
+    align-items: end;
+    
 }
 
 .clearButton,
@@ -53,11 +57,11 @@ button {
 }
 
 button:hover {
-    background-color: rgba(189, 220, 216, 0.9); /* Darken the background color by 10% on hover */
+    background-color: rgba(189, 220, 216, 0.9); /* Darken the button background color by 10% on hover */
   }
 
 button:active {
-    background-color: rgba(189, 220, 216, 0.5);
+    background-color: rgba(189, 220, 216, 0.5);  /* Darken the button background color by 50% on active */
 }
 
 .firstContainer {
