Add funnctions to clear and to delete one charactor in screen

--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ body {
     
 }
 
-.clearButton,
-.deleteButton {
+#clearButton,
+#deleteButton {
     display: flex;
     height: 70px;
     width: 160px;
